fixed button clipping

--- a/src/components/Courses/Course/Course.module.css
+++ b/src/components/Courses/Course/Course.module.css
@@ -40,6 +40,7 @@
   background-color: #40a4c8;
   color: white;
   border: none;
+  z-index: 0;
 }
 
 .cardButton:hover {
