--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
   background-color: black;
   display: flex;
   justify-content: space-between;
